--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-human",
+  "name": "@marianoguerra/json-human",
   "version": "1.0.3",
   "description": "Convert JSON to human readable HTML",
   "main": "src/json.human.js",
